--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm build",
-    "deploy": "gh-pages -d build"
+    "publish": "gh-pages -d build"
 
   },
   "eslintConfig": {
